--- a/index.html
+++ b/index.html
@@ -310,13 +310,184 @@
           </div>
         </div>
       </article>
-      <button type="button" class="button footer__save-button">
-        <svg viewBox="0 0 28 28" class="footer__icon">
-          <use href="./svg/floppy.svg" />
-        </svg>
-        <span class="button__text"> Сохранить на память </span>
-      </button>
+      <article class="card">
+        <h2 class="card__title">3 спринт: Обходные стратегии</h2>
+        <figure class="card__image">
+          <img src="./images/bus_cover.png" alt="Фудтрак" loading="lazy" class="card__picture blur" />
+          <figcaption class="card__label">
+            &lt;support&gt;
+          </figcaption>
+        </figure>
+        <div class="card__content">
+          <div class="card__description">
+            <p class="paragraph">
+              На&nbsp;этом курсе вы&nbsp;постоянно решали разные задачи.
+              В&nbsp;какой-то момент вам могло показаться, что решения просто
+              иссякли. Значит, пришло время посмотреть на&nbsp;задачу под другим
+              углом.
+            </p>
+            <p class="paragraph">
+              Место для ваших воспоминаний о начале третьего спринта.
+            </p>
+          </div>
+          <div class="card__controls">
+            <button type="button" aria-hidden="true" aria-labelledby="like6" class="card__icon-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none"
+                class="like-icon">
+                <g class="heart">
+                  <path class="contour"
+                    d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
+                    fill="var(--heart-contour)" />
+  
+                  <path class="main-body"
+                    d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
+                    fill="none" />
+  
+                  <path class="core"
+                    d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
+                    fill="none" />
+                </g>
+                <path class="sparks"
+                  d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
+                  fill="var(--heart-fill)" />
+              </svg>
+            </button>
+            <button type="button" id="like6" class="button card__like-button">
+              <span class="button__text"> Like </span>
+            </button>
+          </div>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
+        <figure class="card__image">
+          <img src="./images/bus_cover.png" alt="Фудтрак" loading="lazy" class="card__picture invert" />
+          <figcaption class="card__label">
+            &lt;lifes-style: none;&gt;
+          </figcaption>
+        </figure>
+        <div class="card__content">
+          <div class="card__description">
+            <p class="paragraph">
+              Во&nbsp;время учёбы часто возникает чувство, когда не&nbsp;знаешь,
+              за&nbsp;что хвататься. Вроде и&nbsp;проектную пора сдавать,
+              и&nbsp;задачи хочется порешать, и&nbsp;в&nbsp;теории получше
+              разобраться, и&nbsp;жизнь не&nbsp;забыть пожить. В&nbsp;такие
+              моменты очень нужна концентрация. Вспомните, откуда
+              вы&nbsp;её&nbsp;черпали.
+            </p>
+            <p class="paragraph">
+              Место для ваших воспоминаний об окончании третьего спринта.
+            </p>
+          </div>
+          <div class="card__controls">
+            <button type="button" aria-hidden="true" aria-labelledby="like7" class="card__icon-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none"
+                class="like-icon">
+                <g class="heart">
+                  <path class="contour"
+                    d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
+                    fill="var(--heart-contour)" />
+  
+                  <path class="main-body"
+                    d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
+                    fill="none" />
+  
+                  <path class="core"
+                    d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
+                    fill="none" />
+                </g>
+                <path class="sparks"
+                  d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
+                  fill="var(--heart-fill)" />
+              </svg>
+            </button>
+            <button type="button" id="like7" class="button card__like-button">
+              <span class="button__text"> Like </span>
+            </button>
+          </div>
+        </div>
+      </article>
+      <article class="card">
+        <h2 class="card__title">«Сейчас я здесь»</h2>
+        <figure class="card__image">
+          <img src="./images/bus_cover.png" alt="Фудтрак" loading="lazy" class="card__picture hue-rotate" />
+          <figcaption class="card__label">
+            &lt;experience&gt;
+          </figcaption>
+        </figure>
+        <div class="card__content">
+          <div class="card__description">
+            <p class="paragraph">
+              Сейчас вы&nbsp;уже очень много знаете о&nbsp;вёрстке. Но&nbsp;это
+              только начало. Во-первых, впереди ещё много материала про
+              &laquo;красотищу&raquo;. Во-вторых, с&nbsp;окончанием курса учёба
+              не&nbsp;заканчивается. Вёрстка&nbsp;&mdash; это целый мир.
+              И&nbsp;этот мир постоянно меняется. Познать его полностью
+              не&nbsp;получится, но&nbsp;это тот случай, когда важен сам процесс
+              познания. Ведь часто путь&nbsp;&mdash; и&nbsp;есть результат.
+            </p>
+            <p class="paragraph">
+              Место, чтобы остановиться, подумать и написать, что вы чувствуете
+              в этой точке пути.
+            </p>
+          </div>
+          <div class="card__controls">
+            <button type="button" aria-hidden="true" aria-labelledby="like8" class="card__icon-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none"
+                class="like-icon">
+                <g class="heart">
+                  <path class="contour"
+                    d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
+                    fill="var(--heart-contour)" />
+  
+                  <path class="main-body"
+                    d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
+                    fill="none" />
+  
+                  <path class="core"
+                    d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
+                    fill="none" />
+                </g>
+                <path class="sparks"
+                  d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
+                  fill="var(--heart-fill)" />
+              </svg>
+            </button>
+            <button type="button" id="like8" class="button card__like-button">
+              <span class="button__text"> Like </span>
+            </button>
+          </div>
+        </div>
+      </article>
+      <dialog class="modal" id="dialog-id">
+        <form method="dialog" class="modal__form">
+          <div class="modal__content">
+            <svg class="modal__icon" width="28" height="28" viewBox="0 0 28 28">
+              <use href="./svg/floppy.svg#floppy" />
+            </svg>
+            <p class="modal__text">
+              Вставьте дискету, чтобы продолжить
+            </p>
+          </div>
+          <button class="button modal__button">
+            <span class="button__text">
+              ок
+            </span>
+          </button>
+        </form>
+      </dialog>
     </main>
+    <footer class="footer">
+      <button class="button footer__save-button" type="button" onclick="window['dialog-id'].showModal()"
+        aria-controls="dialog-id">
+        <svg class="footer__icon" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"
+          color="currentColor">
+          <use href="./svg/floppy.svg#floppy" />
+        </svg>
+        <span class="button__text">Сохранить на память</span>
+      </button>
+    </footer>
     <script src="./scripts/set-theme.js"></script>
     <script src="./scripts/like.js"></script>
   </body>
